# nonebot-plugin-githubmodels

./: .env.example  .gitignore  .pdm-python  LICENSE  README.md  pyproject.toml
.github/workflows/: pushlish.yml
nonebot_plugin_githubmobile/: __init__.py
nonebot_plugin_githubmodels/: .config.py.swp  GPT_handler.py  __init__.py  config.py  congit.py  context_manager.py  openai_handler.py
nonebot_plugin_githubmodels/css/: dark.css  light.css
src/nonebot_plugin_githubmodels/: __init__.py  openai_handler.py
src/nonebot_plugin_githubmodels/css/: light.css
