[tool.poetry]
name = "nonebot-plugin-githubmodels"
version = "0.2.7"
description = "一个调用 GitHub Models 的 AI 对话插件"
readme = "README.md"
authors = ["lyqgzbl <admin@lyqgzbl.com>"]
license = "MIT"
homepage = "https://github.com/lyqgzbl/nonebot-plugin-githubmodels"
repository = "https://github.com/lyqgzbl/nonebot-plugin-githubmodels"
documentation = "https://github.com/lyqgzbl/nonebot-plugin-githubmodels#readme"
keywords = ["nonebot2", "GitHub Models"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.2.1"
openai = "^1.44.1"
nonebot-plugin-htmlrender = "^0.3.5"
nonebot-plugin-alconna = "^0.54.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"