[project]
name = "nonebot-plugin-githubmodels"
version = "1.0.0"
description = "NoneBot 集成 GitHub Copilot 和 OpenAI 的 AI 代码生成模型插件"
readme = "README.md"
authors = [
    { name = "lyqgzbl", email = "122811297+lyqgzbl@users.noreply.github.com" }
]
requires-python = ">=3.10, <4.0"
license = "MIT"
dependencies = [
  "nonebot2 >=2.2.1, <3.0.0",
  "azure-ai-inference >=1.0.0, <2.0.0",
  "nonebot-plugin-htmlrender >=0.5.0, <1.0.0",
  "nonebot-plugin-alconna >=0.54.0, <1.0.0",
]

[project.urls]
homepage = "https://github.com/lyqgzbl/nonebot-plugin-daily-bing"
repository = "https://github.com/lyqgzbl/nonebot-plugin-daily-bing"
documentation = "https://github.com/lyqgzbl/nonebot-plugin-daily-bing#readme"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
